@@ -50,7 +50,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   3b9dfae51f73761e69811f402c6374c63aeec552 2013110100 mingw32-mpc.xml
   8a11de23e7a89fd11436bdf162ef90712f30101b 2013102300 mingw32-mpfr.xml
-  1413ad59660ad963082e7de10c31bbb725116aee 2014011100 mingw32-package-list.xml
+  1413ad59660ad963082e7de10c31bbb725116aee 2014042700 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   0a5d210a13d073104fb74b4f9c081674c9745cd1 2013090900 mingw32-pthreads-w32.xml
