@@ -41,74 +41,82 @@
         <release tarname="gettext-0.18.3.1-1-mingw32-bin.tar.lzma" >
           <requires eq="mingw32-libgcc-4.8.1-*-mingw32-dll-1.tar" />
           <requires eq="mingw32-libiconv-1.14-3-mingw32-dll-2.tar" />
-          <requires eq="mingw32-libintl-%-mingw32-dll-8.tar" />
         </release>
         <release tarname="gettext-0.18.1.1-2-mingw32-bin.tar.lzma" >
           <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
           <requires ge="mingw32-libiconv-1.14-2-mingw32-*-dll-2.tar" />
-          <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
         </release>
         <release tarname="gettext-0.17-1-mingw32-bin.tar.lzma" >
           <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
           <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
-          <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
         </release>
+        <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
       </component>
 
       <component class="dll">
-        <release tarname="gettext-0.18.3.1-1-mingw32-dll.tar.lzma" >
-          <requires eq="mingw32-libintl-0.18.3.1-1-mingw32-dll-8.tar" />
-          <requires eq="mingw32-libgettextpo-0.18.3.1-1-mingw32-dll-0.tar" />
-          <requires eq="mingw32-libasprintf-0.18.3.1-1-mingw32-dll-0.tar" />
+        <!-- FIXME: to be removed, sooner rather than later; this
+          degenerate package should never have been created in the
+          first place!
+         -->
+        <release tarname="gettext-0.18.3.2-1-mingw32-dll.tar.xz" >
+          <download tarname="none" />
         </release>
+        <release tarname="gettext-0.18.3.1-1-mingw32-dll.tar.lzma" />
+        <requires eq="mingw32-libintl-%-mingw32-dll-8.tar" />
+        <requires eq="mingw32-libgettextpo-%-mingw32-dll-0.tar" />
+        <requires eq="mingw32-libasprintf-%-mingw32-dll-0.tar" />
       </component>
 
       <component class="doc">
+        <release tarname="gettext-0.18.3.2-1-mingw32-doc.tar.xz" />
         <release tarname="gettext-0.18.3.1-1-mingw32-doc.tar.lzma" />
         <release tarname="gettext-0.18.1.1-2-mingw32-doc.tar.lzma" />
         <release tarname="gettext-0.17-1-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="lic">
+        <release tarname="gettext-0.18.3.2-1-mingw32-lic.tar.xz" />
         <release tarname="gettext-0.18.3.1-1-mingw32-lic.tar.lzma" />
         <release tarname="gettext-0.18.1.1-2-mingw32-lic.tar.lzma" />
         <release tarname="gettext-0.17-1-mingw32-lic.tar.lzma" />
       </component>
 
       <component class="info">
+        <release tarname="gettext-0.18.3.2-1-mingw32-info.tar.xz" />
         <release tarname="gettext-0.18.3.1-1-mingw32-info.tar.lzma" />
       </component>
 
       <component class="man">
+        <release tarname="gettext-0.18.3.2-1-mingw32-man.tar.xz" />
         <release tarname="gettext-0.18.3.1-1-mingw32-man.tar.lzma" />
       </component>
 
       <component class="html">
+        <release tarname="gettext-0.18.3.2-1-mingw32-html.tar.xz" >
+          <requires eq="gettext-%-mingw32-%-doc.tar" />
+          <download tarname="none" />
+        </release>
         <release tarname="gettext-0.18.3.1-1-mingw32-html.tar.lzma" />
       </component>
 
       <component class="dev">
+        <release tarname="gettext-0.18.3.2-1-mingw32-dev.tar.xz" />
         <release tarname="gettext-0.18.3.1-1-mingw32-dev.tar.lzma" >
           <requires eq="gettext-0.18.3.1-1-mingw32-dll.tar.lzma" />
         </release>
-        <release tarname="gettext-0.18.1.1-2-mingw32-dev.tar.lzma" >
-          <requires eq="mingw32-libstdc++-*-mingw32-*-dll-6.tar" />
-          <requires eq="mingw32-libgomp-*-mingw32-*-dll-1.tar" />
-          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
-          <requires eq="mingw32-libexpat-*-mingw32-*-dll-1.tar" />
-          <requires eq="mingw32-libgettextpo-%-mingw32-%-dll-0.tar" />
-          <requires ge="mingw32-libiconv-1.14-2-mingw32-*-dll-2.tar" />
-          <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
-        </release>
-        <release tarname="gettext-0.17-1-mingw32-dev.tar.lzma" >
-          <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
-          <requires eq="mingw32-libgettextpo-%-mingw32-%-dll-0.tar" />
-          <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
-          <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
-        </release>
+        <release tarname="gettext-0.18.1.1-2-mingw32-dev.tar.lzma" />
+        <release tarname="gettext-0.17-1-mingw32-dev.tar.lzma" />
+        <requires eq="mingw32-libgcc-*-mingw32-*-dll-1.tar" />
+        <requires eq="mingw32-libstdc++-*-mingw32-*-dll-6.tar" />
+        <requires eq="mingw32-libgomp-*-mingw32-*-dll-1.tar" />
+        <requires eq="mingw32-libexpat-*-mingw32-*-dll-1.tar" />
+        <requires ge="mingw32-libiconv-1.14-2-mingw32-*-dll-2.tar" />
+        <requires eq="mingw32-libgettextpo-%-mingw32-%-dll-0.tar" />
+        <requires eq="mingw32-libintl-%-mingw32-%-dll-8.tar" />
       </component>
 
       <component class="ext">
+        <release tarname="gettext-0.18.3.2-1-mingw32-ext.tar.xz" />
         <release tarname="gettext-0.18.3.1-1-mingw32-ext.tar.lzma" />
         <release tarname="gettext-0.18.1.1-2-mingw32-ext.tar.lzma" />
         <release tarname="gettext-0.17-1-mingw32-ext.tar.lzma" />
@@ -154,6 +162,7 @@
         <release tarname="libintl-0.18.3.1-1-mingw32-dll-8.tar" >
           <download tarname="gettext-0.18.3.1-1-mingw32-dll.tar.lzma"/>
         </release>
+        <release tarname="libintl-0.18.3.2-1-mingw32-dll-8.tar.xz" />
       </component>
     </package>
 
@@ -199,6 +208,7 @@
         <release tarname="libgettextpo-0.18.3.1-1-mingw32-dll-0.tar" >
           <download tarname="gettext-0.18.3.1-1-mingw32-dll.tar.lzma"/>
         </release>
+        <release tarname="libgettextpo-0.18.3.2-1-mingw32-dll-0.tar.xz" />
       </component>
     </package>
 
@@ -243,6 +253,7 @@
         <release tarname="libasprintf-0.18.3.1-1-mingw32-dll-0.tar" >
           <download tarname="none"/>
         </release>
+        <release tarname="libasprintf-0.18.3.2-1-mingw32-dll-0.tar.xz" />
       </component>
     </package>
 
